src/tests/testfiles/variable-declarations/8.c
int main(void) {
    int j = "hello"; // error

    return 0;
}
